--- a/package.json
+++ b/package.json
@@ -6,18 +6,37 @@
   "homepage": "https://codesandbox.io/s/new",
   "main": "src/index.js",
   "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-transform-export-extensions": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "css-loader": "^0.28.11",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.1.0",
+    "postcss": "^6.0.21",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-modules": "^1.1.0",
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "react-router-dom": "4.2.2",
     "react-scripts": "1.1.0",
     "rmwc": "1.4.1",
-    "unistore": "3.0.4"
+    "style-loader": "^0.20.3",
+    "unistore": "3.0.4",
+    "webpack": "^4.4.1",
+    "webpack-dev-server": "^3.1.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "webpack-cli": "^2.0.13"
+  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "cra:start": "react-scripts start",
+    "cra:build": "react-scripts build",
+    "cra:test": "react-scripts test --env=jsdom",
+    "cra:eject": "react-scripts eject",
+    "start": "webpack-dev-server --mode development",
+    "build": "webpack --mode production",
+    "test": "jest --watchAll"
   }
 }
