--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "postcss": "^6.0.21",
     "postcss-cssnext": "^3.1.0",
     "postcss-modules": "^1.1.0",
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
+    "react": "16.3.2",
+    "react-dom": "16.3.2",
     "react-router-dom": "4.2.2",
     "react-scripts": "1.1.0",
     "rmwc": "1.4.1",
@@ -28,14 +28,11 @@
     "webpack-dev-server": "^3.1.1"
   },
   "devDependencies": {
+    "source-map-loader": "^0.2.3",
     "webpack-cli": "^2.0.13"
   },
   "scripts": {
-    "cra:start": "react-scripts start",
-    "cra:build": "react-scripts build",
-    "cra:test": "react-scripts test --env=jsdom",
-    "cra:eject": "react-scripts eject",
-    "start": "webpack-dev-server --mode development",
+    "start": "webpack-dev-server --mode development --env.development",
     "build": "webpack --mode production",
     "test": "jest --watchAll"
   }
