--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "webpack-dev-server": "^3.1.1"
   },
   "devDependencies": {
+    "babel-polyfill": "^6.26.0",
     "source-map-loader": "^0.2.3",
     "webpack-cli": "^2.0.13"
   },
