--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "react-firebase-starter",
-  "version": "1.0.0",
-  "description": "I'm sick of configuring new projects.",
+  "name": "firelist-react",
+  "version": "0.0.0",
+  "description": "The Firelist demo app implemented in React",
   "keywords": [],
-  "homepage": "https://codesandbox.io/s/new",
+  "homepage": "https://codesandbox.io/s/github/how-to-firebase/firelist-react",
   "main": "src/index.js",
   "dependencies": {
     "babel-core": "^6.26.0",
@@ -13,9 +13,6 @@
     "babel-preset-env": "^1.6.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.1.0",
-    "postcss": "^6.0.21",
-    "postcss-cssnext": "^3.1.0",
-    "postcss-modules": "^1.1.0",
     "react": "16.3.2",
     "react-dom": "16.3.2",
     "react-router-dom": "4.2.2",
