--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "4.2.2",
     "react-scripts": "1.1.0",
     "rmwc": "1.4.1",
+    "rxjs": "^6.0.0",
     "unistore": "3.0.4",
     "webpack": "^4.4.1",
     "webpack-dev-server": "^3.1.1"
