--- a/package.json
+++ b/package.json
@@ -10,23 +10,25 @@
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "css-loader": "^0.28.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.1.0",
-    "react": "16.3.2",
-    "react-dom": "16.3.2",
+    "moment": "^2.22.1",
+    "react": "^16.3.2",
+    "react-dates": "^16.6.1",
+    "react-dom": "^16.3.2",
     "react-router-dom": "4.2.2",
     "react-scripts": "1.1.0",
     "rmwc": "1.4.1",
     "rxjs": "^6.0.0",
+    "source-map-loader": "^0.2.3",
+    "style-loader": "^0.21.0",
     "unistore": "3.0.4",
     "webpack": "^4.4.1",
+    "webpack-cli": "^2.0.13",
     "webpack-dev-server": "^3.1.1"
-  },
-  "devDependencies": {
-    "babel-polyfill": "^6.26.0",
-    "source-map-loader": "^0.2.3",
-    "webpack-cli": "^2.0.13"
   },
   "scripts": {
     "start": "webpack-dev-server --mode development --env.development",
