--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "css-loader": "^0.28.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.1.0",
+    "lodash": "^4.17.10",
     "moment": "^2.22.1",
     "react": "^16.3.2",
     "react-dates": "^16.6.1",
