--- a/functions/package.json
+++ b/functions/package.json
@@ -9,8 +9,11 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
-    "firebase-admin": "~5.8.1",
-    "firebase-functions": "^0.8.1"
+    "firebase-admin": "~5.12.0",
+    "firebase-functions": "^1.0.2"
+  },
+  "devDependencies": {
+    "jest": "^22.4.3"
   },
   "private": true
 }
