--- a/functions/package.json
+++ b/functions/package.json
@@ -9,6 +9,8 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "@google-cloud/storage": "^1.6.0",
+    "child-process-promise": "^2.2.1",
     "firebase-admin": "~5.12.0",
     "firebase-functions": "^1.0.2"
   },
