--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "css-loader": "^0.28.11",
+    "firebase-tools": "^3.18.4",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.1.0",
     "lodash": "^4.17.10",
@@ -37,6 +38,7 @@
     "build:old": "rm -rf dist && webpack --mode production && sh bin/copy-public.sh",
     "test": "jest --watchAll",
     "test:functions": "cd functions && node --version && jest --watchAll",
+    "firebase:login": "firebase login",
     "deploy": "firebase deploy",
     "deploy:database": "firebase deploy --only database",
     "deploy:firestore": "firebase deploy --only firestore",
