--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "test": "jest --watchAll",
     "test:functions": "cd functions && node --version && jest --watchAll",
     "firebase:login": "firebase login",
-    "deploy": "firebase deploy",
+    "deploy": "npm run build && firebase deploy",
+    "deploy:windows": "npm run build:windows && firebase deploy",
     "deploy:database": "firebase deploy --only database",
     "deploy:firestore": "firebase deploy --only firestore",
     "deploy:functions": "firebase deploy --only functions",
