--- a/functions/package.json
+++ b/functions/package.json
@@ -6,7 +6,9 @@
     "shell": "firebase experimental:functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "test": "node bin/check-node-version && jest --watchAll",
+    "test:system-version": "jest --watchAll"
   },
   "dependencies": {
     "@google-cloud/storage": "^1.6.0",
@@ -16,6 +18,9 @@
   },
   "devDependencies": {
     "jest": "^22.4.3"
+  },
+  "engines": {
+    "node": "6.14.0"
   },
   "private": true
 }
